Indentation removed in the ul left menu

--- a/style.css
+++ b/style.css
@@ -289,6 +289,12 @@ ul li {
   list-style-position: inside; /*Does not remove indentation*/
   list-style-type: none;
 }
+
+ul{
+  padding: 0px !important;
+}
+
+
 li {
   display: block;
   background-color: #a34545;
