--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ a {
 
 .cards {
   width: 75%;
-  background-color: aquamarine;
+  background-color: transparent;
   margin: 1.5rem 1.5rem;
   height: 50rem; /* Inner height for the cards section */
 }
