--- a/style.css
+++ b/style.css
@@ -61,16 +61,18 @@ body {
   display: flex;
   justify-content: space-evenly;
   flex-direction: row;
+  padding: 0%;
 
   margin-top: 1.5rem;
   padding-right: 0%;
   background-color: transparent;
   width: 96%;
+  transition: margin-top 0.3s ease;
 
 }
 
 .about_section_override{
-  padding-top: 40rem;
+  margin-top: 10rem;
 }
 
 
