--- a/style.css
+++ b/style.css
@@ -428,6 +428,10 @@ h4 {
   font-size: 14px !important;
   color: #0e1821;
 }
+.approachtext{
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
 
 #mini_card {
   background-color: #e59cda;
